# fletar

./: .env.dist  .gitignore  Dockerfile  api.py  app.html  docker-compose-prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: ai_interface.py  api.py  main.py  requirements.txt
fletar/: README.md  main.py  test_spreadsheet.py
