[tool.poetry]
name = "fletar"
version = "0.1.0"
description = ""
authors = ["Juan Manuel Schillaci <jmschillaci@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
flet = "^0.21.2"
pyinstaller = "^6.5.0"
gspread = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
